# KakeiBonByRust-Updater

./: .gitignore  README.md
.github/workflows/: release.yml  test-pat.yml
res/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
